test/must_fail/api/must_fail_read2.ngjs
#!/usr/bin/env ngspicejs
// at most 1 string arg wanted
// linter: ngspicejs-lint
"use strict";

read('a', 'b');
